objects/Subscriptionoffertype__c.object
<CustomObject>
    <fields>
        <fullName>Default_Renewal_Term__c</fullName>
        <description>Default renewal term for subscription.</description>
        <label>Default Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Name of the subscription</description>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Item_ID__c</fullName>
        <description>Id of the subscription inventory.</description>
        <label>Inventory Item ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPI_Test_Order_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NPI order flag for subscription.</description>
        <label>NPI Test Order Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <description>Offertype of the subscription.</description>
        <label>Offer Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <description>Pricing model of subscription.</description>
        <label>Pricing Model</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Term1__c</fullName>
        <description>Renewal term of the subscription used for multiselect picklist.</description>
        <label>Renewal Term1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <description>Renewal term of the subscription.</description>
        <label>Renewal Term</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Type__c</fullName>
        <description>Type of the renewal.</description>
        <label>Renewal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sl_No__c</fullName>
        <description>Serial number for internal use.</description>
        <label>Sl No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>Status code of the subscription.</description>
        <label>Status Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rn_trm__c</fullName>
        <description>Formula to convert renewal term as text.</description>
        <formula>TEXT(Renewal_Term__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>rn_trm</label>
        <type>Text</type>
    </fields>
    <label>Subscription Offer Type</label>
    <nameField>
        <label>SKU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptionoffertypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>